--- a/src/uSeoToolkit.Umbraco8.Website/Views/master.cshtml
+++ b/src/uSeoToolkit.Umbraco8.Website/Views/master.cshtml
@@ -1,11 +1,15 @@
 ﻿@using Umbraco.Core.PropertyEditors
+@using uSeoToolkit.Umbraco8.Core.Services.SeoService
 @inherits UmbracoViewPage
 @{
     Layout = null;
     // Get basic design settings from the homepage
-    var home = (Home)Model.Root();
+    var home = (Home) Model.Root();
     var font = home.Font;
     var colorTheme = home.ColorTheme;
+
+    var seoService = DependencyResolver.Current.GetService<SeoService>();
+    var metaTags = seoService.Get(Model);
 }
 
 <!doctype html>
@@ -14,66 +18,67 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>@Model.Name - @home.Sitename</title>
-    <meta name="description" content="">
-    <meta name="author" content="">
-
-    <link rel="stylesheet" href="@Url.Content("~/css/umbraco-starterkit-style.css")" />
+    @if (metaTags != null)
+    {
+        <title>@metaTags.Title</title>
+        <meta name="description" content="@metaTags.Description"/>
+    }
+    <link rel="stylesheet" href="@Url.Content("~/css/umbraco-starterkit-style.css")"/>
     @RenderSection("Header", required: false)
 </head>
 
 <body class="frontpage theme-font-@font theme-color-@colorTheme">
-    <div class="mobile-nav">
-        <nav class="nav-bar">
-            @Html.Partial("~/views/partials/navigation/topNavigation.cshtml")
-        </nav>
+<div class="mobile-nav">
+    <nav class="nav-bar">
+        @Html.Partial("~/views/partials/navigation/topNavigation.cshtml")
+    </nav>
+</div>
+
+<header class="header">
+
+    <div class="logo">
+        @if (home.SiteLogo != null && !string.IsNullOrEmpty(home.SiteLogo.Url))
+        {
+            <div class="nav-link--home">
+                <img class="logo-image" src="@home.SiteLogo.Url" alt="@home.Sitename">
+            </div>
+        }
+        else
+        {
+            <a class="nav-link nav-link--home nav-link--home__text logo-text" href="/">@home.Sitename</a>
+        }
     </div>
 
-    <header class="header">
+    <nav class="nav-bar top-nav">
+        @Html.Partial("~/Views/Partials/Navigation/TopNavigation.cshtml")
+    </nav>
 
-        <div class="logo">
-            @if (home.SiteLogo != null && !string.IsNullOrEmpty(home.SiteLogo.Url))
-            {
-                <div class="nav-link--home">
-                    <img class="logo-image" src="@home.SiteLogo.Url" alt="@home.Sitename">
-                </div>
-            }
-            else
-            {
-                <a class="nav-link nav-link--home nav-link--home__text logo-text" href="/">@home.Sitename</a>
-            }
+    <div class="mobile-nav-handler">
+        <div class="hamburger lines" id="toggle-nav">
+            <span></span>
         </div>
+    </div>
 
-        <nav class="nav-bar top-nav">
-            @Html.Partial("~/Views/Partials/Navigation/TopNavigation.cshtml")
-        </nav>
+</header>
 
-        <div class="mobile-nav-handler">
-            <div class="hamburger lines" id="toggle-nav">
-                <span></span>
+<main>
+    @RenderBody()
+</main>
+
+<footer class="section--themed">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 ta-center">
+                @home.FooterAddress
             </div>
         </div>
+    </div>
+</footer>
 
-    </header>
-
-    <main>
-        @RenderBody()
-    </main>
-
-    <footer class="section--themed">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12 ta-center">
-                    @home.FooterAddress
-                </div>
-            </div>
-        </div>
-    </footer>
-
-    <script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script>
-    <script src="https://ajax.aspnetcdn.com/ajax/jquery.validate/1.13.1/jquery.validate.min.js"></script>
-    <script src="https://ajax.aspnetcdn.com/ajax/mvc/5.2.3/jquery.validate.unobtrusive.min.js"></script>
-    <script src="@Url.Content("~/scripts/umbraco-starterkit-app.js")"></script>
+<script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script>
+<script src="https://ajax.aspnetcdn.com/ajax/jquery.validate/1.13.1/jquery.validate.min.js"></script>
+<script src="https://ajax.aspnetcdn.com/ajax/mvc/5.2.3/jquery.validate.unobtrusive.min.js"></script>
+<script src="@Url.Content("~/scripts/umbraco-starterkit-app.js")"></script>
 
 </body>
 
